Fixed wrong colour on bar background

--- a/apache/web/public/ow.css
+++ b/apache/web/public/ow.css
@@ -301,7 +301,7 @@ switch_container {
     max-width: 120px;
     min-height: 25px;
     max-height: 25px;
-    background: rgba(0,0,0,0.5);
+    background: rgba(0,0,0,0.4);
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 50px;
@@ -348,7 +348,7 @@ analog_container {
 bar_container {
     width: 300px;
     height: 50px;
-    background: #404E4D;
+    background: rgba(0,0,0,0.2);
     border-radius: 7.5px;
     overflow: hidden;
     display: flex;
